# rag-document-qa

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: auth.py  conversation_routes.py  dependencies.py  main.py  models.py  routes.py  session.py
database/: __init__.py  connection.py  crud.py  models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  router.ts  style.css
frontend/src/components/: ChatInput.vue  ChatMessage.vue  ChatView.vue  DocumentPreview.vue  EmptyState.vue  EvaluationPanel.vue  FilePreviewModal.vue  Sidebar.vue  SourceCard.vue  SuggestedQuestions.vue  ToastNotification.vue
frontend/src/composables/: useFileUpload.ts  useMarkdown.ts
frontend/src/services/: api.ts
frontend/src/stores/: auth.ts  chat.ts  conversation.ts  theme.ts  toast.ts
frontend/src/types/: index.ts
frontend/src/views/: ChatApp.vue  LoginView.vue
rag/: __init__.py  chain.py  embeddings.py  evaluation.py  llm_factory.py  loader.py  retriever.py  splitter.py
tests/: test_chain.py  test_loader.py  test_splitter.py
