[project]
name = "rag-pdf-qa"
version = "1.0.0"
description = "RAG-based document QA system with LangChain LCEL, ChromaDB, FastAPI, and Vue3"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0,<0.4.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-text-splitters>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "chromadb>=0.5.0,<1.0.0",
    "pypdf>=4.0.0,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "python-multipart>=0.0.9",
    "docx2txt>=0.8,<1.0.0",
    "unstructured>=0.15.0,<1.0.0",
    "markdown>=3.5.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
